--- a/Task.dita
+++ b/Task.dita
@@ -9,7 +9,11 @@
         </context>
         <steps>
             <step>
-                <cmd></cmd>
+                <cmd><mathml>
+                        <mml:math xmlns:mml="http://www.w3.org/1998/Math/MathML">
+                            <mml:mn>123123</mml:mn>
+                        </mml:math>
+                    </mathml></cmd>
             </step>
         </steps>
     </taskbody>
