--- a/Task.dita
+++ b/Task.dita
@@ -9,7 +9,18 @@
         </context>
         <steps>
             <step>
-                <cmd/>
+                <cmd><mathml>
+                        <m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
+                            <m:msqrt>
+                                <m:mn>123123</m:mn>
+                            </m:msqrt>
+                        </m:math>
+                        <m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
+                            <m:msqrt>
+                                <m:mn>123123</m:mn>
+                            </m:msqrt>
+                        </m:math>
+                    </mathml></cmd>
             </step>
         </steps>
     </taskbody>
