Committing with Oxygen XML Web Author

--- a/Second.dita
+++ b/Second.dita
@@ -20,6 +20,11 @@
                                 <m:mn>123</m:mn>
                             </m:msqrt>
                         </m:math>
+                        <m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
+                            <m:msqrt>
+                                <m:mn>333</m:mn>
+                            </m:msqrt>
+                        </m:math>
                     </mathml></cmd>
             </step>
         </steps>
