--- a/Second.dita
+++ b/Second.dita
@@ -11,8 +11,19 @@
             <step>
                 <cmd><mathml>
                         <m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
+                            <m:mfrac>
+                                <m:mn>1</m:mn>
+                                <m:mn>2</m:mn>
+                            </m:mfrac>
+                        </m:math>
+                        <m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
                             <m:msqrt>
                                 <m:mn>555</m:mn>
+                            </m:msqrt>
+                        </m:math>
+                        <m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
+                            <m:msqrt>
+                                <m:mn>123</m:mn>
                             </m:msqrt>
                         </m:math>
                     </mathml></cmd>
