--- a/Second.dita
+++ b/Second.dita
@@ -15,8 +15,13 @@
                         </m:math>
                         <m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
                             <m:msqrt>
-                                <m:mn>123</m:mn>
+                                <m:mn>13</m:mn>
                             </m:msqrt>
+                        </m:math>
+                        <m:math class="wrs_chemistry" xmlns:m="http://www.w3.org/1998/Math/MathML">
+                            <m:mi>HO</m:mi>
+                            <m:mo>&#x2206;</m:mo>
+                            <m:mi mathvariant="normal">O</m:mi>
                         </m:math>
                     </mathml></cmd>
             </step>
