--- a/Concept.dita
+++ b/Concept.dita
@@ -4,6 +4,14 @@
     <title></title>
     <shortdesc></shortdesc>
     <conbody>
-        <p/>
+        <p><mathml>
+                <m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
+                    <m:msqrt>
+                        <m:mfenced open="|" close="|">
+                            <m:mn>356123</m:mn>
+                        </m:mfenced>
+                    </m:msqrt>
+                </m:math>
+            </mathml></p>
     </conbody>
 </concept>
