Committing with Oxygen XML Web Author

--- a/Concept.dita
+++ b/Concept.dita
@@ -30,6 +30,42 @@
                         </m:msqrt>
                     </m:msqrt>
                 </m:math>
+            </mathml><mathml>
+                <m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
+                    <m:mfenced>
+                        <m:mn>43423423</m:mn>
+                    </m:mfenced>
+                </m:math>
+            </mathml><mathml>
+                <m:math class="wrs_chemistry" xmlns:m="http://www.w3.org/1998/Math/MathML">
+                    <m:mi mathvariant="normal">&#x3C0;</m:mi>
+                    <m:mo>&#x2206;</m:mo>
+                    <m:mo>&#xD7;</m:mo>
+                    <m:mo>&#xD7;</m:mo>
+                    <m:mo>&#xF7;</m:mo>
+                    <m:mo>&#xF7;</m:mo>
+                    <m:mo>&#xF7;</m:mo>
+                </m:math>
+            </mathml><mathml>
+                <m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
+                    <m:mtable>
+                        <m:mtr>
+                            <m:mtd>
+                                <m:mn>1</m:mn>
+                            </m:mtd>
+                        </m:mtr>
+                        <m:mtr>
+                            <m:mtd>
+                                <m:mn>2</m:mn>
+                            </m:mtd>
+                        </m:mtr>
+                        <m:mtr>
+                            <m:mtd>
+                                <m:mn>3</m:mn>
+                            </m:mtd>
+                        </m:mtr>
+                    </m:mtable>
+                </m:math>
             </mathml></p>
     </conbody>
 </concept>
