Committing with Oxygen XML Web Author

--- a/Concept.dita
+++ b/Concept.dita
@@ -73,6 +73,12 @@
                         </m:mtr>
                     </m:mtable>
                 </m:math>
+            </mathml><mathml>
+                <m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
+                    <m:msqrt>
+                        <m:mn>1231</m:mn>
+                    </m:msqrt>
+                </m:math>
             </mathml></p>
     </conbody>
 </concept>
